  - skips Boto's Exception processing for this check
  - dupe of bug #1507109 and bug #1537185
* Merged in lp:~mifchip/duplicity/duplicity
  - fix bug #1313964, absolute path doesn't work for FTP
* Merged in lp:~fpytloun/duplicity/webdav-gssapi
  - support GSSAPI authentication in webdav backend
* Add more pylint ignore warnings tags
* Adjust so test_restart.py can run on Mac as well


New in v0.7.06 (2015/12/07)
---------------------------
* Merged in lp:~mnjul/duplicity/s3-infreq-access
  - This adds support for AWS S3's newly announced Infrequent Access
    storage class and is intended to implement Blueprint:
    https://blueprints.launchpad.net/duplicity/+spec/aws-s3-std-ia-class .
  - A new command line option, --s3-use-ia, is added, and boto backend
    will automatically use the correct storage class value depending on
    whether --s3-use-rrs and --s3-use-ia is set. Command line parser will
    prompt error if both --s3-use-ia and --s3-use-rrs are used together,
    as they conflict with each other.
  - The manpage has been updated giving a short explanation on the new
    option. Its wording derives from Amazon's official announcement:
    https://aws.amazon.com/about-aws/whats-new/2015/09/announcing-new-\
    amazon-s3-storage-class-and-lower-glacier-prices/
* The ptyprocess module no longer supports Python 2.6, so fix tox.ini to
  use an older version.  Make explicit environs for all tests.
* Upgrade to newest version of pep8 and pylint.   Add three ignores
  to test_pep8 and one to test_pylint to get the rest to pass.  They
* Applied patch from Alexander Zangerl to update to changes in lockfile
  API 0.9 and later.  Updated README to notify users.
* Modded tox.ini to use the latest lockfile.
* Merged in lp:~ed.so/duplicity/setup.shebang
  - Having the python interpreter searched in the PATH is much more
    flexible than the /usr/bin/python inserted into our scripts shebang
    by setuptools.  This patch prevents that. don't touch my shebang! :)